<resources>
    <string name="app_name">Test Project</string>
    <string name="cansel">キャンセル</string>
    <string name="tenpo_category">店舗/カテゴリー</string>
    <string name="title">タイトル</string>
    <string name="category">カテゴリ</string>
    <string name="biko">備考</string>
    <string name="time">終了時間</string>
    <string name="sanka">参加</string>
    <string name="back">戻る</string>
    <string name="top">TOP画面</string>
    <string name="creat">作成</string>

    <string-array name="category">
        <item>勉強</item>
        <item>趣味</item>
        <item>恋愛</item>
        <item>雑談</item>
    </string-array>

    <string-array name="number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="search_form_label">検索フォーム</string>
    <string name="button_label">送信</string>
    <string name="message_label">メッセージ</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_invalid_UserName">users</string>
    <string name="error_invalid_username" />
    <string name="title_activity_map_confirmation">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_table_search">Map</string>
    <string name="title_activity_login2">Sign in</string>
</resources>
