<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yuya0817.ReviveSeat.starbucks">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onbackButtontapped" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/flame_text"
        android:gravity="start|center"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/category"
        android:layout_marginTop="165dp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/flame_listview"
        android:gravity="start|center"
        android:text="@string/category"
        android:id="@+id/category"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/flame_listview"
        android:gravity="start|center"
        android:text="@string/biko"
        android:id="@+id/biko"
        android:layout_below="@+id/category"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/flame_text2"
        android:gravity="start|center"
        android:text="@string/time"
        android:id="@+id/time"
        android:layout_below="@+id/biko"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sanka"
        android:id="@+id/sanka"
        android:layout_above="@+id/back"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button_selector"
        android:id="@+id/seat1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
