<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yuya0817.ReviveSeat.Main2Activity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:id="@+id/tableLayout"
            android:layout_weight="1">

            <TableRow>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton3"
                    android:checked="false"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton4"
                    android:checked="false"
                    android:layout_weight="1" />
            </TableRow>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true">

                <TableRow>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/radioButton"
                        android:checked="true"
                        android:layout_weight="1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/radioButton2"
                        android:checked="false"
                        android:layout_weight="1" />
                </TableRow>
            </RadioGroup>


        </TableLayout>



        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tableLayout"
            android:layout_toEndOf="@+id/tableLayout"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton5"
                    android:checked="false"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton6"
                    android:checked="false"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton7"
                    android:checked="false"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton8"
                    android:checked="false"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@drawable/flame_text2"
            android:gravity="start|center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/biko"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/biko" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/back"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creat"
            android:id="@+id/creat"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/flame_text"
            android:gravity="start|center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/category"
            android:id="@+id/category"
            android:layout_above="@+id/biko"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="start|center"
            android:id="@+id/categorytext"
            android:layout_above="@+id/biko"
            android:layout_alignEnd="@+id/category" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="start|center"
            android:id="@+id/bikotext"
            android:layout_alignBottom="@+id/biko"
            android:layout_alignEnd="@+id/biko" />

    </RelativeLayout>

</LinearLayout>
